- Support for partySkills on certain job classes.
- kRO/PK servers are now (partially?) supported. In config.txt, set
  pkServer to 1.
- TAB completion in Wx and Linux interface!!!
- Input history support in Linux interface.
- Spells being cast now show how long they take.
- Combo skill support.
- While walking, Kore can teleport until it's near the destination.

mon_control.txt:
- mon_control.txt has gained more features. The new syntax is:
  (monster name) (attack-auto) (teleport) (search) (level)

- (attack-auto):
  You can now mark a monster as "always aggressive". This means that, 
  if a certain monster is on screen, Kore will always attack it, even
  when Kore is sitting and the monster isn't attacking you.
  In mon_control.txt, set the (attack_auto) flag to 2.
  Example:
  Skeleton Soldier 2 0 0 0
- (level):
  You can configure Kore to only attack a monster, if your base level is high
  enough. Example:
  Sohee 1 0 0 50
  Only attack Sohee if your are lv 50 or higher.

New commands:
- guild join (flag)
  Accept or deny a guild join request.
- pl (number)
  Show detailed information about a player.

New config options:
- useSelf_skill, partySkill and useSelf_item now also support the 'monsters' option.
- New partySkill options:
  * target_aggressives
    Only activate partySkill if a certain monster attacks a party member.
  * target_isJob
  * target_isNotJob
    Only activate partySkill for certain job classes

- attackComboSlot {
     ...everything that attackSkillSlot supports is also supported here...
     afterSkill (skill name)
     waitBeforeUse (number of seconds)
  }
  Use a certain attack skill, after another attack skill was last used.

- avoidList_inLockOnly (flag)
  Set to 1, if you want to avoid people on your avoid list when they
  are on screen, but only when you are in lockMap.
- pkServer (flag)
  To to 1 if you're playing kRO or on a PK server.
- dcOnMute (flag)
  Disconnect when you have been muted by a GM.